[gd_scene load_steps=3 format=3 uid="uid://cn8y4k2s7dlgp"]

[ext_resource type="Script" path="res://Scripts/ServerConfig.gd" id="1_3h7k9"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_config_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)

[node name="ServerConfig" type="Control"]
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_3h7k9")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_config_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -160.0
offset_right = 200.0
offset_bottom = 160.0
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Server Configuration"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LivesContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LivesLabel" type="Label" parent="VBoxContainer/LivesContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Lives:"

[node name="LivesSpinBox" type="SpinBox" parent="VBoxContainer/LivesContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 3.0

[node name="MaxPlayersContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MaxPlayersLabel" type="Label" parent="VBoxContainer/MaxPlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Players:"

[node name="MaxPlayersSpinBox" type="SpinBox" parent="VBoxContainer/MaxPlayersContainer"]
layout_mode = 2
min_value = 2.0
max_value = 8.0
value = 4.0

[node name="SpeedContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SpeedLabel" type="Label" parent="VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Speed:"

[node name="SpeedSlider" type="HSlider" parent="VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.0

[node name="SpeedValueLabel" type="Label" parent="VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "1.0x"

[node name="DamageContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DamageLabel" type="Label" parent="VBoxContainer/DamageContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Damage:"

[node name="DamageSlider" type="HSlider" parent="VBoxContainer/DamageContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.0

[node name="DamageValueLabel" type="Label" parent="VBoxContainer/DamageContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "1.0x"

[node name="TimeLimitContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TimeLimitCheckBox" type="CheckBox" parent="VBoxContainer/TimeLimitContainer"]
layout_mode = 2
text = "Time Limit (minutes):"

[node name="TimeLimitSpinBox" type="SpinBox" parent="VBoxContainer/TimeLimitContainer"]
visible = false
layout_mode = 2
min_value = 1.0
max_value = 60.0
value = 5.0

[node name="HeartsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeartsCheckBox" type="CheckBox" parent="VBoxContainer/HeartsContainer"]
layout_mode = 2
text = "Heart powerups"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(120, 40)
text = "Back"

[node name="StartServerButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(120, 40)
text = "Start Server" 